# synchronizationPrimitives

./: CMakeLists.txt  main.c
barrier/: barrier.c  barrier.h
cond/: cond.c  cond.h  main.c
deadlock/: doc  main.c
mutex/: doc  main.c  mutex.c  mutex.h
rwmutex/: doc  main.c  rwmutex.c  rwmutex.h
spinlock/: doc  main.c  spinlock.c  spinlock.h
